# omni-oracle

./: .gitignore  CLAUDE.md  KNOWN_ISSUES.md  Makefile  README.md  STATUS.md  pyproject.toml  verified-deps.toml
.github/workflows/: ci.yml
src/: __init__.py  backtest.py  config.py  models.py  pipeline.py  run_f5.py  run_f5_filter.py  smoke.py
src/discovery/: granger.py  lagged_mi.py  mi_screening.py
src/ingest/: base.py  eia.py  fred.py  fred_expanded.py  noaa.py  worldbank.py
src/output/: export.py  filters.py  hypothesis.py  trading.py
src/preprocess/: alignment.py  quality.py  stationarity.py
src/scoring/: ranker.py
src/storage/: repo.py  schema.py
src/validation/: fdr.py  temporal_oos.py
tests/: conftest.py  test_eia.py  test_fdr.py  test_granger.py  test_l2_oracles.py  test_l3_properties.py  test_l5_real_data.py  test_lagged_mi.py  test_mi.py  test_noaa.py  test_oos.py  test_stationarity.py  test_storage.py  test_walk_forward.py
verify/: alt_granger.py  alt_mi.py  run_comparison.py
